feat: add endpoint to retrieve recipes by user ID
