# swagger-doc.json
@@ -56,6 +56,30 @@
         ]
       }
     },
+    "/recipes/user/{userId}": {
+      "get": {
+        "operationId": "RecipeController_findByUser",
+        "parameters": [
+          {
+            "name": "userId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "summary": "Get recipes by user ID",
+        "tags": [
+          "recipes"
+        ]
+      }
+    },
     "/recipes/{id}": {
       "patch": {
         "operationId": "RecipeController_update",
